@@ -566,7 +566,6 @@ namespace WTF {
         T& last() { return at(size() - 1); }
         const T& last() const { return at(size() - 1); }
 
-        template<typename U> bool contains(const U&) const;
         template<typename U> size_t find(const U&) const;
         template<typename U> size_t reverseFind(const U&) const;
 
@@ -742,13 +741,6 @@ namespace WTF {
         m_size = other.size();
 
         return *this;
-    }
-
-    template<typename T, size_t inlineCapacity>
-    template<typename U>
-    bool Vector<T, inlineCapacity>::contains(const U& value) const
-    {
-        return find(value) != notFound;
     }
 
     template<typename T, size_t inlineCapacity>
